@@ -6,6 +6,8 @@ Gora Change Log
 
 0.3 (trunk) Current Development:
 
+* GORA-129 redundant conf field in HBaseStore (ferdy)
+
 * GORA-123 Append correct submodule directories to SCM paths in submodule pom's (lewismc)
 
 0.2 Release: 20/04/2012
